

Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).


## v2.10.3.4 Change Log
- [add] show on startup options for ampview and linearity/ps window. Set in the linearity/ps window
- [add] can now ignore 14bit Midi messages. More devices should work. Option in Setup->Serial/Network/Midi CAT->Midi
- [add] can now combine midi control id and status to be used as the control ID. This should allow devices that share controlIDs for multiple buttons/sliders to work. Option in Setup->Serial/Network/Midi CAT->Midi
- [fix] Hercules DJControl Starlight midi device is now better handled. Wheel finger press for example are ignored. If you used this device before you will need to reconfigure as the control IDs will have changed
- [fix] PortAudio #850 fix included
- [fix] FM should now use low/high cuts. Carlson's rules used for filter width display in FM rx and tx
- [fix] Andromeda ModeSpecificForm shouldn't now clear on console resize
- [change] tweaks to waterfall agc to minimise screen wide pulse on T/R
- [change] waterfall low/high step sizes lowered to 5

## v2.10.3.3 Change Log
- [fix] resolved DLL load issue for Win7 and other OS's that dont have SetThreadDescription()

## v2.10.3.2 Change Log
- [fix] resolved issue where a 3 band equaliser would cause out of array bounds exception

## v2.10.3.1 Change Log
- [fix] serial data arriving could prevent Thetis from closing and could also cause UI freeze
- [change] reverted to .net framework 4.8.0 to work with more operating systems
- [change] added additional small buffer sizes to VAC config, 8, 16, 32

## v2.10.3 Change Log
- [add] T/R noise pulse in waterfall improved. Waterfall agc delayed. New option in setup to purge WDSP analyzer buffers to perform extra clear down
- [add] skin server implementation
- [add] FM tx/rx AF filters in DSP FM tab
- [add] IQ swap for each vac
- [add] additional items stored against tx profile
	- FM AF filters
	- VAC force checkbox state
	- SwapIQ